test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-create/99-cleanup.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: cleanup
spec:
  timeouts: {}
  try:
  - script:
      content: |
        kubectl delete ur -A --all
        kubectl delete -f cloned-secret.yaml --ignore-not-found=true
