test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-create/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-clone-nosync-create
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: manifests.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pol-clone-nosync-create-policy
        - name: namespace
          value: default
  - name: step-02
    try:
    - apply:
        file: create-cm.yaml
    - assert:
        file: cloned-secret.yaml
  - name: step-99
    try:
    - script:
        content: |
          kubectl delete ur -A --all
          kubectl delete -f cloned-secret.yaml --ignore-not-found=true
